@@ -1,3 +1,9 @@
+2012-02-28  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
+
+	* matlab/FileFormatToolbox/writemetaimagefile.m (v0.1.3):
+
+	- Add "logical" (boolean) as input data type.
+
 2012-02-26  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
 	* Add matlab/FiltersToolbox/blockproc3.m:
